src/objects/brBlog_article__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Draft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Published_Date__c</fullName>
        <label>Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Body__c</fullName>
        <label>Short Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Blog Article</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Draft__c</columns>
        <columns>Published__c</columns>
        <columns>Published_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blog Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>